# Condensate

./: .gitignore  README.md  app.py  app_helpers.py  condensate_observer.py  condensate_observer_laptop.py  condenser.py  engine.py  examples.py  graph_builder.py  inference_graph.json  laptop_observer_wrapper.sh  membrane.py  predictor.py  requirements.txt  rust_predictor.py  test_condenser.py  test_graph_builder.py  test_membrane.py  test_predictor.py  test_rust_vs_python.py  torch_membrane.py  viz.py
.github/workflows/: sync_to_hf.yml
docs/superpowers/plans/: 2026-06-24-condensate-demo-reimagining-plan.md
docs/superpowers/specs/: 2026-06-23-condensate-demo-reimagining-design.md
rust_core/: Cargo.toml  pyproject.toml
rust_core/src/: bench.rs  cli.rs  condenser.rs  erasure.rs  gate.rs  graph.rs  keyframe.rs  lenia.rs  lib.rs  locality.rs  membrane.rs  minitid.rs  pipeline.rs  predictor.rs  pybind.rs  sleep.rs  sparse.rs  splat.rs
tests/: test_engine.py  test_regions_join.py  test_viz.py
wheels/: condensate_core-0.1.0-cp310-abi3-manylinux_2_28_x86_64.whl
